feat: add images row slice

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -81,6 +81,32 @@
         },
         "items": {}
       }
+    },
+    "ImagesRow": {
+      "default": {
+        "items": {
+          "imageDescription": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        },
+        "primary": {
+          "title": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          },
+          "description": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        }
+      }
     }
   },
   "_cts": {
